--- a/app/containers/GameBoard/style.scss
+++ b/app/containers/GameBoard/style.scss
@@ -30,7 +30,7 @@ $primary-color-4: #DA251C;
   height:6vmin;
   position: static;
   overflow: hidden;
-  
+  border: 1px solid rgba(0,0,0,0.09);
 }
 button{
   margin: 5px;
@@ -39,23 +39,46 @@ button{
 position: absolute;
 
 }
-#top >.a:nth-child(even){
+#top .a:nth-child(3n+2){
   background-color:$primary-color-1;
 }
-#bottom >.a:nth-child(odd){
+#top .a:nth-child(6){
+  background-color:$primary-color-1;
+}
+#top .a:nth-child(2){
+  background-color: #FFFFFF;
+}
+
+
+#bottom .a:nth-child(3n+2){
   background-color:$primary-color-4;
 }
-#left >.diff >.a:nth-child(even){
-  background-color:$primary-color-2;
+#bottom .a:nth-child(13){
+  background-color:$primary-color-4;
 }
-#left >.diff + div > .a:nth-child(odd){
-  background-color:$primary-color-2;
+#bottom .a:nth-child(17){
+  background-color: #FFFFFF;
 }
-#right >.diff +div >.a:nth-child(even){
-  background-color:$primary-color-3;
+
+#left .diff:first-child .a:nth-child(2){
+  background-color:$primary-color-2; 
 }
-#right >.diff>.a:nth-child(odd){
-  background-color:$primary-color-3;
+#left div:not(.diff) .a{
+  background-color:$primary-color-2; 
+}
+#left div:not(.diff) .a:first-child{
+  background-color:#FFFFFF;  
+}
+
+
+#right div:nth-child(2) .a:last-child{
+  background-color:#FFFFFF; 
+}
+#right div:not(.diff) .a{
+  background-color:$primary-color-3; 
+}
+#right div:last-child .a:nth-child(5){
+  background-color:$primary-color-3;  
 }
 
 
